fixed alignmnet

--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
 /* Header (combined with the nav bar) - Navya*/
 
+.headerRow {
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.headerColumn {
+  float: left;
+  padding: 10px 90px 30px 10px;
+  color: black;
+  backdrop-filter: transparent;
+
+}
+
+.cardli {
+  padding: 16px;
+  text-align: center;
+  display: inline;
+  font-size: 16px;
+}
+
 .dropbtn {
-  background-color:white;
+  background-color: white;
   color: black;
   padding: 16px;
-  font-size: 16px;
+  font-size: 15px;
   border: none;
 }
 
@@ -19,7 +42,7 @@
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -30,33 +53,15 @@
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-
-.headerRow {
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
 
-.headerColumn {
-  float: left;
-  padding: 0px 220px 30px 150px;
-  color: black;
-  backdrop-filter: transparent;
-
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 
-.cardli {
-  padding: 16px;
-  text-align: center;
-  display: inline;
-}
 
 /* Banner with background image (includes button and title) - Nora */
 
